RESOLVED FIXED159877
All-in-one buildfix after r202439
https://bugs.webkit.org/show_bug.cgi?id=159877
Summary All-in-one buildfix after r202439
Csaba Osztrogonác
Reported 2016-07-18 04:54:13 PDT
https://trac.webkit.org/changeset/202439 broke the all-in-one build: In file included from ../../Source/WebCore/Modules/webaudio/AudioContext.h:31:0, from DerivedSources/WebCore/JSAudioContext.h:25, from ../../Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:43, from ../../Source/WebCore/bindings/js/JSBindingsAllInOne.cpp:63: ../../Source/WebCore/Modules/webaudio/AudioDestinationNode.h:62:25: error: reference to 'Function' is ambiguous ... ../../Source/WTF/wtf/Forward.h:28:28: note: candidates are: template<class T> class WTF::Function ../../Source/JavaScriptCore/runtime/PropertySlot.h:46:5: note: JSC::Attribute Function similar bug: https://bugs.webkit.org/show_bug.cgi?id=159875
Attachments
Patch (1.64 KB, patch)
2016-07-18 04:57 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-07-18 04:57:14 PDT
WebKit Commit Bot
Comment 2 2016-07-18 04:59:27 PDT
Attachment 283900 [details] did not pass style-queue: ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:62: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:63: Extra space before ( in function call [whitespace/parens] [4] ERROR: Source/WebCore/Modules/webaudio/AudioDestinationNode.h:64: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 3 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2016-07-18 23:51:45 PDT
Comment on attachment 283900 [details] Patch Clearing flags on attachment: 283900 Committed r203399: <http://trac.webkit.org/changeset/203399>
WebKit Commit Bot
Comment 4 2016-07-18 23:51:49 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.