All-in-one buildfix after r202439 https://bugs.webkit.org/show_bug.cgi?id=159877

Reviewed by Chris Dumez.

* Modules/webaudio/AudioDestinationNode.h:
(WebCore::AudioDestinationNode::resume):
(WebCore::AudioDestinationNode::suspend):
(WebCore::AudioDestinationNode::close):


Canonical link: https://commits.webkit.org/178082@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203399 268f45cc-cd09-0410-ab3c-d52691b4dbfc